ability to choose from themes

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -51,6 +51,19 @@ section {
 	margin-top: 8em;
 }
 
+#chooseTheme {
+	margin-top: 1em;
+	margin-bottom: 1em;
+
+	.theme img {
+		cursor: pointer;
+	}
+}
+
+#copyTheme {
+	margin-top: 10em;
+}
+
 #finished {
 	margin: 8em;
 
