--- a/src/css/style.less
+++ b/src/css/style.less
@@ -47,10 +47,14 @@ footer {
 
 #chooseTheme .theme img {
 	cursor: pointer;
+	width: 100%;
+	height: auto;
 }
 
 #finished h2 {
-	display: block;
-	text-align: center;
 	font-weight: bolder;
+}
+
+#finished .button-group {
+	margin-left: 9em;
 }
